<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/registration_employee"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/registration_name"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_staff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/registration_staff"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <EditText
                        android:id="@+id/registration_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:digits="1234567890+-() "
                        android:hint="@string/prompt_login"
                        android:inputType="phone"
                        android:maxLength="18" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/registration_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/avatar" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_corp_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_corp_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/registration_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_customer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/customer" />

                <RadioButton
                    android:id="@+id/radio_performer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/performer" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/registration_performer_groupe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/registration_auto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <kz.nurzhan.maskededittext.MaskedEditText
                        android:id="@+id/registration_auto_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="5dp"
                        android:hint="@string/registration_auto_number"
                        android:inputType="text|textCapCharacters"
                        android:textAllCaps="true"
                        app:mask="A999AA999" />

                        <ImageView
                            android:id="@+id/registration_auto_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_search_24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/registration_auto_number"
                            app:layout_constraintTop_toTopOf="parent"
                            android:visibility="gone"
                            />
                        <ImageView
                            android:id="@+id/registration_auto_empty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_menu_delete"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/registration_auto_number"
                            app:layout_constraintTop_toTopOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_auto_marka"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_auto_marka"
                        android:inputType="text"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_auto_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_auto_model"
                        android:inputType="text"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_auto_vin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="QWERTYUIOPASDFGHJKLZXCVBNM1234567890"
                        android:hint="@string/registration_auto_vin"
                        android:inputType="text|textCapCharacters"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>





                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_auto_pts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_auto_pts"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_auto_sts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_auto_sts"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>




                <LinearLayout
                    android:id="@+id/registration_osago_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_auto_osago_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="QWERTYUIOPASDFGHJKLZXCVBNM1234567890"
                            android:hint="@string/registration_auto_osago_number"
                            android:inputType="text|textCapCharacters"
                            android:enabled="false"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_auto_osago_start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:hint="Дата"
                            android:enabled="false"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_auto_osago_expire_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:hint="Дата окончания"
                            android:enabled="false"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/registration_texservice_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.msa.dateedittext.DateEditText
                            android:id="@+id/registration_auto_texservice_start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:hint="Дата техобслуживания"
                            android:enabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.msa.dateedittext.DateEditText
                            android:id="@+id/registration_auto_texservice_expire_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:hint="Дата окончания техобслуживания"
                            android:enabled="false"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/registration_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registration_btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@color/toast_bg"
                android:text="@string/logout"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@android:color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/registration_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>