<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_performing_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_name"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/order_performong_data">

                    <TextView
                        android:id="@+id/order_performing_data"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/order_data"
                        android:inputType="text|datetime"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                        android:textSize="18sp"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_performing_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/order_from"
                        android:enabled="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_performing_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/order_to"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_performing_purpose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/order_purpose"
                        android:text="111111111"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_performing_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/order_comment"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </ScrollView>


            <TextView
                android:id="@+id/order_performing_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="log"
                android:layout_margin="10dp"
                android:visibility="gone"/>

        <ImageView
            android:id="@+id/order_performing_call"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:src="@drawable/phone" />

        <Button
            android:id="@+id/order_performing_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:background="@drawable/rounded_blue"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/order_time" />
                        <Chronometer
                            android:id="@+id/order_performing_chronometr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="10sp"
                            android:text="00:00"
                            android:textStyle="bold"
                            android:textColor="@android:color/holo_red_dark"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:cardElevation="3dp"
                    android:layout_margin="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/order_distance"
                            android:layout_marginHorizontal="5dp"/>
                        <TextView
                            android:id="@+id/order_performing_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="10sp"
                            android:textStyle="bold"
                            android:text="0 м"
                            android:textColor="@android:color/holo_red_dark"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        <Button
            android:id="@+id/order_performing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/order_completed"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/order_performing_progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <!-- подключение нижнего экрана -->
    <include
        layout="@layout/bottom_sheet"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>